not going to pool md4